[package]
name = "rust-telemetry-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
nix = { version = "0.27", features = ["process", "resource"] }
libc = "0.2"
